# reader-podcast

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLANNING.md  README.md  TASKS.md  add_article_cli.py  docker-compose.example.yaml  get_content.py  migrate.py  pyproject.toml  read_content.py  requirements.txt  serve.py  write_feed.py
app/: auth.py  config.py  db.py  feed_gen.py  rss_monitor.py  scraper.py  serve.py  text_clean.py  tts.py  vibevoice_tts.py  worker.py
templates/: add.html  base.html  preview.html  settings.html  subscriptions.html
