[project]
name = "reader-podcast"
version = "0.1.0"
description = "Self-hosted web app that converts articles into podcast episodes using Edge TTS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bottle",
    "python-dotenv",
    "edge-tts",
    "newspaper3k",
    "pydub",
    "nltk",
    "feedparser",
    "lxml",
    "lxml-html-clean",
    "openai-whisper",
    "thefuzz",
    "torch",
    # vibevoice is installed from GitHub in the Dockerfile (not on PyPI):
    #   pip install git+https://github.com/microsoft/VibeVoice.git
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
